fix scrollbar

--- a/klimaland-app/src/styles/main.scss
+++ b/klimaland-app/src/styles/main.scss
@@ -19,14 +19,20 @@ body {
 html {
   overflow: scroll;
   overflow-x: hidden;
-
 }
 
 ::-webkit-scrollbar {
-  width: 0;
-  /* Remove scrollbar space */
-  background: transparent;
-  /* Optional: just make scrollbar invisible */
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #fff1db;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #faebd6;
+  border-radius: 10px;
 }
 
 button {
@@ -678,7 +684,7 @@ code {
           overflow-y: scroll;
 
           .help {
-            overflow-y: scroll;
+            overflow-y: hidden;
             overflow-x: hidden;
 
             .text {
